--- a/pages/ten.html
+++ b/pages/ten.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=g, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ten</title>
 </head>
 <body>
+    <h1>My number ten</h1>
     
 </body>
 </html>
